Akka actors refactor & Sparkta's runner refactor with testing

--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -118,9 +118,9 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_${scala.binary.version}</artifactId>
             <classifier>tests</classifier>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
             <version>2.7.1</version>
@@ -135,5 +135,11 @@
             <artifactId>curator-test</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.scalamock</groupId>
+            <artifactId>scalamock-scalatest-support_2.10</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
     </dependencies>
 </project>
