compatibility with spark 1.3

--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -45,6 +45,13 @@
             <groupId>com.github.nscala-time</groupId>
             <artifactId>nscala-time_${scala.binary.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>cassandra-connector</artifactId>
+            <version>1.3.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/spark-cassandra-connector-assembly-1.3.0-SNAPSHOT.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
