--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -116,7 +116,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4.1</version>
                 <configuration>
                     <finalName>${project.name}-plugin</finalName>
                     <filters>
@@ -148,6 +148,10 @@
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                             <resource>reference.conf</resource>
+                        </transformer>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>com.stratio.sparkta.driver.SparktaClusterJob</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
